Updated with JWT Authentication

--- a/moviereviewsystem/src/main/resources/application.properties
+++ b/moviereviewsystem/src/main/resources/application.properties
@@ -13,3 +13,13 @@ server.port=8090
 # App Properties
 mrs.app.jwtSecret= mySecretKey
 mrs.app.jwtExpirationMs= 86400000
+
+## MULTIPART
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
